examples/c/error-codes/violates-constraint/fatal/CV-CEB11-bad-static.output
CV-CEB11-bad-static.c:5:12: error: invalid operands to binary expression ('int' and 'double')
  return x | 0.0;
         ~ ^ ~~~
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-q5RSg/pp-4pem1.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
